--- a/refs.bib
+++ b/refs.bib
@@ -448,3 +448,96 @@ url = {http://www.sciencedirect.com/science/article/pii/S0191886907004266},
 volume = {44},
 year = {2008}
 }
+
+@article{DiFabio2014,
+author = {{Di Fabio}, Annamaria and Saklofske, Donald H.},
+doi = {10.1016/j.paid.2014.01.026},
+file = {:home/whn/Documents/Mendeley Desktop/Personality and Individual Differences/Di Fabio, Saklofske\_2014\_Promoting individual resources The challenge of trait emotional intelligence.pdf:pdf},
+issn = {01918869},
+journal = {Personality and Individual Differences},
+mendeley-groups = {mag\_dsv},
+month = jul,
+pages = {19--23},
+publisher = {Elsevier Ltd},
+title = {{Promoting individual resources: The challenge of trait emotional intelligence}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0191886914000464},
+volume = {65},
+year = {2014}
+}
+
+@article{Mayer2008,
+abstract = {Emotional intelligence (EI) involves the ability to carry out accurate reasoning about emotions and the ability to use emotions and emotional knowledge to enhance thought. We discuss the origins of the EI concept, define EI, and describe the scope of the field today. We review three approaches taken to date from both a theoretical and methodological perspective. We find that Specific-Ability and Integrative-Model approaches adequately conceptualize and measure EI. Pivotal in this review are those studies that address the relation between EI measures and meaningful criteria including social outcomes, performance, and psychological and physical well-being. The Discussion section is followed by a list of summary points and recommended issues for future research.},
+author = {Mayer, John D and Roberts, Richard D and Barsade, Sigal G},
+doi = {10.1146/annurev.psych.59.103006.093646},
+file = {:home/whn/Documents/Mendeley Desktop/Annual review of psychology/Mayer, Roberts, Barsade\_2008\_Human abilities emotional intelligence.pdf:pdf},
+issn = {0066-4308},
+journal = {Annual review of psychology},
+keywords = {Affect,Aptitude,Humans,Intelligence,Psychological Theory,Social Behavior,Social Perception},
+mendeley-groups = {mag\_dsv},
+month = jan,
+pages = {507--36},
+pmid = {17937602},
+title = {{Human abilities: emotional intelligence.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/17937602},
+volume = {59},
+year = {2008}
+}
+
+@article{Niedenthal2012,
+abstract = {Answers to the question "What are human emotions for?" have stimulated highly productive programs of research on emotional phenomena in psychology and neuroscience in the past decade. Although a variety of functions have been proposed and examined at different levels of abstraction, what is undeniable is that when emotional processing is compromised, most things social go awry. In this review we survey the research findings documenting the functions of emotion and link these to new discoveries about how emotion is accurately processed and transmitted. We focus specifically on emotion processing in dyads and groups, which reflects the current scientific trend. Within dyads, emotional expressions and learning and understanding through vicarious emotion are the phenomena of interest. Behavioral and brain mechanisms supporting their successful occurrence are evaluated. At the group level, group emotions and group-based emotions, two very different phenomena, are discussed, and mechanistic accounts are reviewed.},
+author = {Niedenthal, Paula M and Brauer, Markus},
+doi = {10.1146/annurev.psych.121208.131605},
+file = {:home/whn/Documents/Mendeley Desktop/Annual review of psychology/Niedenthal, Brauer\_2012\_Social functionality of human emotion.pdf:pdf},
+issn = {1545-2085},
+journal = {Annual review of psychology},
+keywords = {embodied simulation,emotion,facial expression,group emotion,group-based,vicarious emotion},
+mendeley-groups = {mag\_dsv},
+month = jan,
+pages = {259--85},
+pmid = {22017377},
+title = {{Social functionality of human emotion.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/22017377},
+volume = {63},
+year = {2012}
+}
+
+@article{Brackett2006,
+author = {Brackett, MA and Salovey, Peter},
+file = {:home/whn/Documents/Mendeley Desktop/Psicothema/Brackett, Salovey\_2006\_Measuring emotional intelligence with the Mayer-Salovery-Caruso Emotional Intelligence Test (MSCEIT).pdf:pdf},
+journal = {Psicothema},
+mendeley-groups = {mag\_dsv},
+pages = {34--41},
+title = {{Measuring emotional intelligence with the Mayer-Salovery-Caruso Emotional Intelligence Test (MSCEIT)}},
+url = {http://www.unioviedo.es/reunido/index.php/PST/article/view/8417},
+volume = {18},
+year = {2006}
+}
+
+@article{Petrides2001,
+author = {Petrides, KV and Furnham, Adrian},
+file = {:home/whn/Documents/Mendeley Desktop/European Journal of Personality/Petrides, Furnham\_2001\_Trait emotional intelligence Psychometric investigation with reference to established trait taxonomies.pdf:pdf},
+journal = {European Journal of Personality},
+mendeley-groups = {mag\_dsv},
+number = {February},
+title = {{Trait emotional intelligence: Psychometric investigation with reference to established trait taxonomies}},
+url = {http://onlinelibrary.wiley.com/doi/10.1002/per.416/full},
+volume = {448},
+year = {2001}
+}
+@article{Freudenthaler2007,
+abstract = {Freudenthaler and Neubauer (2005) have recently developed and validated performance measures of emotional management abilities (EMA), requiring subjects to indicate their typical behaviour in emotional situations (typical-performance instruction, TP) instead of assessing the effectiveness of different behavioural alternatives or indicating the most adequate response (maximum-performance instruction, MP). In the present study (n=176), we examined the effects of these two instruction forms (TP vs. MP) on the EMA-scores in a between-subject design. In addition, the relations of typical and maximum EMA to cognitive intelligence components and personality traits were tested. Instruction-related comparisons of the EMA-scores yielded not only lower means but also higher standard deviations and higher reliabilities in the TP-condition. As expected, maximum EMA were significantly correlated with cognitive intelligence components but not with personality traits. In contrast, the typical EMA were moderately associated with personality traits but not related to cognitive abilities, providing further evidence of the importance to distinguish between typical and maximum performance.},
+author = {Freudenthaler, H. Harald and Neubauer, Aljoscha C.},
+doi = {10.1016/j.paid.2006.10.031},
+file = {:home/whn/Documents/Mendeley Desktop/Personality and Individual Differences/Freudenthaler, Neubauer\_2007\_Measuring emotional management abilities Further evidence of the importance to distinguish between typical.pdf:pdf},
+issn = {01918869},
+journal = {Personality and Individual Differences},
+keywords = {Emotional intelligence,Emotional management,Intelligence,Maximum performance,Personality,Typical performance},
+mendeley-groups = {mag\_dsv},
+month = jun,
+number = {8},
+pages = {1561--1572},
+title = {{Measuring emotional management abilities: Further evidence of the importance to distinguish between typical and maximum performance}},
+url = {http://www.sciencedirect.com/science/article/pii/S0191886906004387},
+volume = {42},
+year = {2007}
+}
