fix name of journal of nonverbal behaviour

--- a/refs.bib
+++ b/refs.bib
@@ -267,7 +267,7 @@ year = {2010}
 @article{Biehl1997,
 author = {Biehl, Michael and Matsumoto, David and Ekman, Paul},
 file = {:home/whn/tmp/ContentServer (1).pdf:pdf},
-journal = {Journal of Nonverbal \ldots},
+journal = {Journal of Nonverbal Behavior},
 mendeley-groups = {mag\_dsv},
 number = {1},
 title = {{Matsumoto and Ekman's Japanese and Caucasian Facial Expressions of Emotion (JACFEE): Reliability data and cross-national differences}},
