Fix problem with firstnames

--- a/preamble.tex
+++ b/preamble.tex
@@ -8,7 +8,7 @@
 \usepackage[below]{placeins}
 \hypersetup{colorlinks=true,citecolor=blue,linkcolor=blue,citebordercolor={0 1 0},linktocpage,pdfstartview=FitH,anchorcolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue}
 \linespread{1.3}
-\usepackage[citestyle=apa,bibstyle=apa,hyperref=true,maxcitenames=3,url=true,backend=biber,natbib=true]{biblatex}
+\usepackage[citestyle=apa,bibstyle=apa,hyperref=true,maxcitenames=3,url=true,backend=biber,natbib=true,uniquename=mininit]{biblatex}
 \usepackage[american]{babel}
 \usepackage[parfill]{parskip}
 \usepackage{siunitx}
