minor changes to introduction

--- a/refs.bib
+++ b/refs.bib
@@ -541,3 +541,13 @@ url = {http://www.sciencedirect.com/science/article/pii/S0191886906004387},
 volume = {42},
 year = {2007}
 }
+
+@article{Salovey1995,
+author = {Salovey, P and Mayer, JD and Goldman, SL},
+file = {:home/whn/Documents/Mendeley Desktop/Emotion, disclosure, and \ldots/Unknown\_Unknown\_Emotional attention, clarity and repair Exploring emotional intelligence using the Trait Meta-Mood Scale.pdf:pdf},
+journal = {Emotion, disclosure, and \ldots},
+mendeley-groups = {mag\_dsv},
+title = {{Emotional attention, clarity, and repair: Exploring emotional intelligence using the Trait Meta-Mood Scale}},
+url = {http://www.unh.edu/emotional\_intelligence/EI Assets/CognitionandAffect/CA1995SaloveyMayer.pdf},
+year = {1995}
+}
