--- a/outline.org
+++ b/outline.org
@@ -38,23 +38,26 @@
   different authors suggesting widely different models of emotional
   intelligence \citep{McCleskey2014,Mayer2008,Petrides2010}. Other
   authors (TK, Who? Locke surely) have questioned the validity of
-  emotional intelligence. Indeed, emotional intelligence has sometimes
-  been found to correlate with personality factors
+  emotional intelligence. Indeed, emotional intelligence has been
+  found to correlate with personality factors
   \citep[e.g.][]{Warwick2004, Petrides2001} and cognitive abilities
   \citep[e.g.][]{Freudenthaler2007}, calling into question the
   divergent validity, to that point of some authors (TK Locke and
   someone else) doubting the concepts usefulness.
   
-  Several approaches have been used to measure emotional
-  intelligence. \citet{Mikolajczak2014} approached the measuring of
-  emotional intelligence and developed a 50-item inventory for
-  emotional intelligence. \citet{Baron-Cohen2001} approached the
-  problem from a different angle asking participants to identify an
-  emotion based just on a picture showing a pair of eyes. Another
-  method is measuring emotional facial recognition
-  \parencite{Schlegel2012}. Indeed, the results of \citet{Schlegel2012} seem
-  to indicate that the recognition of emotional faces is a single ability
-  as opposed to multiple separate abilities, lending validity to the
+  Several approaches have been used to measure emotional intelligence,
+  both ability tests \citep{Mayer2003}, self-reported ability
+  \citep{Bar-On1997}, and trait measures (TK, ref),
+  \citet{Mikolajczak2014} approached the measuring of emotional
+  intelligence and developed a 50-item inventory for emotional
+  intelligence. More specialized \citet{Baron-Cohen2001} approached
+  the problem from a different angle asking participants to identify
+  an emotion based just on a picture showing a pair of eyes. Another
+  strand of research is focused on measuring emotional facial
+  recognition \parencite{Schlegel2012}. The results of
+  \citet{Schlegel2012} seem to indicate that the recognition of
+  emotional faces is a single ability as opposed to multiple separate
+  abilities, affirming to some degree the convergent validity to the
   construct of emotional intelligence.
   
   One approach that might be taken for emotional intelligence testing
@@ -234,7 +237,11 @@
     running contrary to the factor structure used found by
     \citet{Mayer2003}. The results found by \citet{Rossen2008} seem to
     suggest that the sub-scales do not match the intended theoretical
-    concepts.
+    concepts. For measuring trait emotional intelligence
+    \cite{Salovey1995} introduced Trait meta-mood scale (TTMS) which
+    aims to measure the tendency to attend to ones moods and emotions,
+    this scale has been found not to correlate with MSCEIT
+    \citep{Warwick2004}.
 
     Another interesting inventory for measuring emotional intelligence
     is the Profile of Emotional Competence (PEC), consisting of 50
