--- a/refs.bib
+++ b/refs.bib
@@ -551,3 +551,105 @@ title = {{Emotional attention, clarity, and repair: Exploring emotional intellig
 url = {http://www.unh.edu/emotional\_intelligence/EI Assets/CognitionandAffect/CA1995SaloveyMayer.pdf},
 year = {1995}
 }
+
+@article{Ekman1992,
+author = {Ekman, Paul},
+file = {:home/whn/Documents/Mendeley Desktop/Unknown/Ekman\_2008\_An argument for basic emotions An Argument for Basic Emotions.pdf:pdf},
+journal = {Cognition \& Emotion},
+mendeley-groups = {mag\_dsv},
+number = {6},
+pages = {169--200},
+title = {{An argument for basic emotions}},
+year = {1992}
+}
+@article{Ekman1987,
+author = {Ekman, Paul and Friesen, WV},
+file = {:home/whn/Documents/Mendeley Desktop/Journal of personality \ldots/Ekman, Friesen\_1987\_Universals and cultural differences in the judgments of facial expressions of emotion.pdf:pdf},
+journal = {Journal of personality \ldots},
+mendeley-groups = {mag\_dsv},
+number = {4},
+pages = {712--717},
+title = {{Universals and cultural differences in the judgments of facial expressions of emotion.}},
+url = {http://psycnet.apa.org/journals/psp/53/4/712/},
+volume = {5},
+year = {1987}
+}
+@article{Ekman1997,
+author = {Ekman, P},
+file = {:home/whn/Documents/Mendeley Desktop/Innovation The European Journal of Social Science \ldots/Ekman\_1997\_Should we call it expression or communication.pdf:pdf},
+journal = {Innovation: The European Journal of Social Science \ldots},
+mendeley-groups = {kand\_dsv,mag\_dsv},
+title = {{Should we call it expression or communication?}},
+url = {http://www.tandfonline.com/doi/abs/10.1080/13511610.1997.9968538},
+year = {1997}
+}
+@article{Ekman2003,
+abstract = {Darwin did not focus on deception. Only a few sentences in his book mentioned the issue. One of them raised the very interesting question of whether it is difficult to voluntarily inhibit the emotional expressions that are most difficult to voluntarily fabricate. Another suggestion was that it would be possible to unmask a fabricated expression by the absence of the difficult-to-voluntarily-generate facial actions. Still another was that during emotion body movements could be more easily suppressed than facial expression. Research relevant to each of Darwin's suggestions is reviewed, as is other research on deception that Darwin did not foresee.},
+author = {Ekman, Paul},
+doi = {10.1196/annals.1280.010},
+file = {:home/whn/Documents/Mendeley Desktop/Annals of the New York Academy of Sciences/Ekman\_2003\_Darwin, Deception, and Facial Expression.pdf:pdf},
+isbn = {1749-6632},
+issn = {00778923},
+journal = {Annals of the New York Academy of Sciences},
+keywords = {Asymmetry,Darwin,Deception,Duchenne,Emotion,Facial Action Coding System,Facial expression,Illustrators,Inhibition,Leakage,Lies,Lying,Micro-facial-expressions,Pitch,Smile},
+mendeley-groups = {mag\_dsv},
+pages = {205--221},
+pmid = {14766633},
+title = {{Darwin, Deception, and Facial Expression}},
+volume = {1000},
+year = {2003}
+}
+@article{Ekman1974,
+author = {Ekman, P and Friesen, WV},
+file = {:home/whn/Documents/Mendeley Desktop/Journal of Personality and Social \ldots/Ekman, Friesen\_1974\_Detecting deception from the body or face.pdf:pdf},
+journal = {Journal of Personality and Social \ldots},
+mendeley-groups = {mag\_dsv},
+title = {{Detecting deception from the body or face.}},
+url = {http://psycnet.apa.org/journals/psp/29/3/288/},
+year = {1974}
+}
+@article{Ekman1991,
+author = {Ekman, Paul and O'Sullivan, Maureen},
+doi = {10.1037//0003-066X.46.9.913},
+file = {:home/whn/Documents/Mendeley Desktop/American psychologist/Ekman, O'Sullivan\_1991\_Who can catch a liar.pdf:pdf},
+issn = {0003-066X},
+journal = {American psychologist},
+mendeley-groups = {mag\_dsv},
+number = {9},
+pages = {913--920},
+title = {{Who can catch a liar?}},
+url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0003-066X.46.9.913 http://psycnet.apa.org/journals/amp/46/9/913/},
+volume = {46},
+year = {1991}
+}
+@article{Ekman1969,
+author = {Ekman, Paul and Friesen, W V},
+file = {:home/whn/Documents/Mendeley Desktop/Psychiatry/Ekman, Friesen\_1969\_Nonverbal leakage and clues to deception.pdf:pdf},
+issn = {0033-2747},
+journal = {Psychiatry},
+keywords = {Affect,Arousal,Cues,Depression,Ego,Facial Expression,Feedback,Humans,Kinesics,Movement,Professional-Patient Relations,Psychoanalytic Theory,Psychotherapy,Verbal Behavior},
+mendeley-groups = {mag\_dsv},
+month = mar,
+number = {1},
+pages = {88--106},
+pmid = {5779090},
+title = {{Nonverbal leakage and clues to deception.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/5779090},
+volume = {32},
+year = {1969}
+}
+
+@article{Frank1997,
+author = {Frank, MG and Ekman, Paul},
+doi = {10.1037//0022-3514.72.6.1429},
+file = {:home/whn/Documents/Mendeley Desktop/Journal of personality and social psychology/Frank, Ekman\_1997\_The ability to detect deceit generalizes across different types of high-stake lies(2).pdf:pdf},
+issn = {0022-3514},
+journal = {Journal of personality and social psychology},
+mendeley-groups = {mag\_dsv},
+number = {6},
+pages = {1429--1439},
+title = {{The ability to detect deceit generalizes across different types of high-stake lies.}},
+url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-3514.72.6.1429 http://psycnet.apa.org/journals/psp/72/6/1429/},
+volume = {72},
+year = {1997}
+}
