Set page size to a4

--- a/preamble.tex
+++ b/preamble.tex
@@ -4,7 +4,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[normalem]{ulem}
 \usepackage[version=3]{mhchem}
-\usepackage[innermargin=1.5in,outermargin=1.25in,vmargin=1.25in]{geometry}
+\usepackage[innermargin=1.5in,outermargin=1.25in,vmargin=1.25in,a4paper]{geometry}
 \usepackage[below]{placeins}
 \hypersetup{colorlinks=true,citecolor=blue,linkcolor=blue,citebordercolor={0 1 0},linktocpage,pdfstartview=FitH,anchorcolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue}
 \linespread{1.3}
