--- a/refs.bib
+++ b/refs.bib
@@ -653,3 +653,30 @@ url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-3514.72.6.1429 http://psyc
 volume = {72},
 year = {1997}
 }
+
+@article{Matsumoto2000,
+author = {Matsumoto, David and LeRoux, J. and Wilson-Cohn, C. and Raroque, Jake and Kooken, Kristie and Ekman, Paul and Yrizarry, Nathan and Loewinger, Sherry and Uchida, Hideko and Yee, Albert and Others},
+file = {:home/whn/Documents/Mendeley Desktop/Journal of Nonverbal Behavior/Matsumoto et al.\_2000\_A new test to measure emotion recognition ability Matsumoto and Ekman's Japanese and Caucasian Brief Affect Recogn.pdf:pdf},
+journal = {Journal of Nonverbal Behavior},
+mendeley-groups = {mag\_dsv},
+number = {3},
+pages = {179--209},
+publisher = {Springer},
+title = {{A new test to measure emotion recognition ability: Matsumoto and Ekman's Japanese and Caucasian Brief Affect Recognition Test (JACBART)}},
+url = {http://www.springerlink.com/index/L0499720741P0581.pdf},
+volume = {24},
+year = {2000}
+}
+
+@incollection{Ekman1974a,
+address = {Washington D.C.},
+author = {Ekman, Paul and Friesen, WV},
+booktitle = {The Psychology of Depression: Contemporary Theory and Research},
+editor = {Friedman, R J and Katz, M M},
+file = {:home/whn/Documents/Mendeley Desktop/The Psychology of Depression Contemporary Theory and Research/Ekman, Friesen\_1974\_Nonverbal behavior and psychopathology.pdf:pdf},
+mendeley-groups = {mag\_dsv},
+publisher = {Winston \& Sons},
+title = {{Nonverbal behavior and psychopathology}},
+url = {https://www.paulekman.com/wp-content/uploads/2013/07/Nonverbal-Behavior-And-Psychopathology.pdf},
+year = {1974}
+}
