--- a/paradigms.tex
+++ b/paradigms.tex
@@ -2,17 +2,17 @@
 \begin {table}[H]
   \caption{Earlier methods of measuring emotional intelligence}
   \begin{tabularx}{\textwidth}{llll}
-    \textbf{Scale} & \textbf{Subscale} & \textbf{Ability} & \textbf{Model} \\
+    \textbf{Scale} & \textbf{Subscale} & \textbf{Measure} & \textbf{Model} \\
     \toprule
 
     \multirow{4}{*}{MSCEIT}
-    & Perceiving Faces/Pictures & Identifiying &  Abiliity \\
+    & Perceiving Faces/Pictures & Identifiying &  Ability \\
     & Using Sensation/Facliation & Feelings to Thoughts & Ability \\
     & Understanding Blends/Changes & Understanding others & Ability \\
     & Managing emotions/relations  & Problem solving & Ability \\
     \midrule
 
-    \multirow{10}{*}{PEC}
+    \multirow{10}{*}{(S)PEC}
     & Interpersonal Identification & Self-report questionnaire & Ability \\
     & Interpersonal Expression & Self-report questionnaire & Ability \\
     & Interpersonal Comprehension & Self-report questionnaire & Ability \\
@@ -24,6 +24,13 @@
     & Intrapersonal Comprehension & Self-report questionnaire & Ability \\
     & Intrapersonal Regulation & Self-report questionnaire & Ability \\
     & Intrapersonal Utilization & Self-report questionnaire & Ability \\    
-    
+
+    \midrule
+    \multirow{4}{*}{EQ-I}
+    & Self-Perception & Self-report questionnarie & Trait \\
+    & Self-Expression & Self-report questionnaire & Trait \\
+    & Interpersonal & Self-report questionnaire & Trait \\
+    & Decision making & Self-report questionnaire & Trait \\
+    & Stress management & Self-report questionnaire & Trait \\
   \end{tabularx}
 \end{table}
