--- a/paradigms.tex
+++ b/paradigms.tex
@@ -2,14 +2,14 @@
 \begin {table}[H]
   \caption{Earlier methods of measuring emotional intelligence}
   \begin{tabularx}{\textwidth}{llll}
-    \textbf{Scale} & \textbf{Subscale} & \textbf{Measure} & \textbf{Model} \\
+    \textbf{Scale} & \textbf{Subscale} & \textbf{Measure/Task} & \textbf{Model} \\
     \toprule
 
     \multirow{4}{*}{MSCEIT}
-    & Perceiving Faces/Pictures & Identifiying &  Ability \\
-    & Using Sensation/Facliation & Feelings to Thoughts & Ability \\
-    & Understanding Blends/Changes & Understanding others & Ability \\
-    & Managing emotions/relations  & Problem solving & Ability \\
+    & Identifying Emotions & Perceiving Faces/Pictures    & Ability \\
+    & Facilitating Thought & Using Sensation/Facliation   & Ability \\
+    & Understanding Emotion & Understanding Blends/Changes & Ability \\
+    & Managing Emotions & Managing emotions/relations      & Ability \\
     \midrule
 
     \multirow{10}{*}{(S)PEC}
@@ -32,5 +32,25 @@
     & Interpersonal & Self-report questionnaire & Trait \\
     & Decision making & Self-report questionnaire & Trait \\
     & Stress management & Self-report questionnaire & Trait \\
+
+    \midrule
+
+    \multirow{6}{*}{METT}
+    & Happiness & Facial Expression Recognition & Basic Emotions \\
+    & Sadness & Facial Expression Recognition & Basic Emotions \\
+    & Fear & Facial Expression Recognition & Basic Emotions \\
+    & Anger & Facial Expression Recognition & Basic Emotions \\
+    & Surprise & Facial Expression Recognition & Basic Emotions \\
+    & Disgust & Facial Expression Recognition & Basic Emotions \\
+
+    \midrule
+
+    \multirow{2}{*}{TAS}
+    & Identifying Feelings & Self-report questionnarie & Ability \\
+    & Describing Feelings & Self-report questionnarie & Ability \\
+
+    \midrule
+
+    RTMITE & & Facial Expression Recognition & Ability
   \end{tabularx}
 \end{table}
