--- a/refs.bib
+++ b/refs.bib
@@ -680,3 +680,16 @@ title = {{Nonverbal behavior and psychopathology}},
 url = {https://www.paulekman.com/wp-content/uploads/2013/07/Nonverbal-Behavior-And-Psychopathology.pdf},
 year = {1974}
 }
+
+@article{Bagby1994,
+author = {Bagby, R Michael and Parker, James D. A. and Taylor, Grame J.},
+file = {:home/whn/data/Mendeley Desktop/Journal of psychosomatic research/Bagby, Parker, Taylor\_1994\_The twenty-item Toronto Alexithymia Scale—I. Item selection and cross-validation of the factor structure.pdf:pdf},
+journal = {Journal of psychosomatic research},
+mendeley-groups = {mag\_dsv},
+number = {1},
+pages = {23--32},
+title = {{The twenty-item Toronto Alexithymia Scale—I. Item selection and cross-validation of the factor structure}},
+url = {http://www.sciencedirect.com/science/article/pii/0022399994900051},
+volume = {38},
+year = {1994}
+}
